@startuml

title __CODE's Class Diagram__\n

  namespace be.isims.ihm.dp.tp1.ex3.code {
    class be.isims.ihm.dp.tp1.ex3.code.Directory {
        + Directory()
        + Directory()
        + addFile()
        + deleteFile()
        + getChildFile()
    }
  }
  

  namespace be.isims.ihm.dp.tp1.ex3.code {
    class be.isims.ihm.dp.tp1.ex3.code.File {
        - content : String
        + File()
        + File()
    }
  }
  

  namespace be.isims.ihm.dp.tp1.ex3.code {
    abstract class be.isims.ihm.dp.tp1.ex3.code.FileSystem {
        # name : String
        + FileSystem()
        + FileSystem()
        + getInfos()
        + getName()
        + getParentFile()
        + setParentFile()
    }
  }
  

  namespace be.isims.ihm.dp.tp1.ex3.code {
    class be.isims.ihm.dp.tp1.ex3.code.Main {
        {static} - cd : Directory
        {static} - root : Directory
        {static} + main()
    }
  }
  

  be.isims.ihm.dp.tp1.ex3.code.Directory -up-|> be.isims.ihm.dp.tp1.ex3.code.FileSystem
  be.isims.ihm.dp.tp1.ex3.code.Directory o-- be.isims.ihm.dp.tp1.ex3.code.FileSystem : childFile
  be.isims.ihm.dp.tp1.ex3.code.File -up-|> be.isims.ihm.dp.tp1.ex3.code.FileSystem
  be.isims.ihm.dp.tp1.ex3.code.FileSystem o-- be.isims.ihm.dp.tp1.ex3.code.FileSystem : parentFile


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
